Fixed the width bug on tablet for widgets

--- a/miniprojects/src/app/styles/widgets.css
+++ b/miniprojects/src/app/styles/widgets.css
@@ -16,13 +16,13 @@ body {
 @media all and (min-width: 768px) {
     #productWidgets {
         box-shadow: 0 10px 85px rgba(0, 0, 0, .15);
-        width: 720px;
+        padding: 0 1rem 3.5rem;
+        width: 745px;
     }
 }
 
 @media all and (min-width: 992px) {
     #productWidgets {
-        padding: 0 1rem 3.5rem;
         width: 800px;
     }
 }
